--- a/SharpEncrypt/SharpEncrypt.csproj
+++ b/SharpEncrypt/SharpEncrypt.csproj
@@ -57,11 +57,14 @@
     </ApplicationDefinition>
     <Compile Include="AesCryptographyService.cs" />
     <Compile Include="FileInfo.cs" />
+    <Compile Include="IBufferable.cs" />
     <Compile Include="InvertBooleanConverter.cs" />
+    <Compile Include="OutputBuffer.cs" />
     <Compile Include="ScalableListBox.xaml.cs">
       <DependentUpon>ScalableListBox.xaml</DependentUpon>
     </Compile>
     <Compile Include="SharpEncryptModel.cs" />
+    <Compile Include="TextBlockBufferable.cs" />
     <Compile Include="Util.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
