--- a/SharpEncrypt/SharpEncrypt.csproj
+++ b/SharpEncrypt/SharpEncrypt.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -59,7 +60,9 @@
     <Compile Include="BackgroundWorkerTracker.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="FileEncryptorBase.cs" />
     <Compile Include="FileInfo.cs" />
+    <Compile Include="FolderEncryptor.cs" />
     <Compile Include="IBufferable.cs" />
     <Compile Include="InvertBooleanConverter.cs" />
     <Compile Include="IWorkTracker.cs" />
