--- a/SharpEncrypt/SharpEncrypt.csproj
+++ b/SharpEncrypt/SharpEncrypt.csproj
@@ -70,6 +70,7 @@
     <Compile Include="ScalableListBox.xaml.cs">
       <DependentUpon>ScalableListBox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SharpEncryptException.cs" />
     <Compile Include="SharpEncryptModel.cs" />
     <Compile Include="TextBlockBufferable.cs" />
     <Compile Include="Util.cs" />
