Added option to encrypt folder names and fixed bug where files would sometimes get deleted when encrypt filename is off

--- a/SharpEncrypt/SharpEncrypt.csproj
+++ b/SharpEncrypt/SharpEncrypt.csproj
@@ -60,6 +60,7 @@
     <Compile Include="BackgroundWorkerTracker.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="EncryptOptions.cs" />
     <Compile Include="FileEncryptorBase.cs" />
     <Compile Include="FileInfo.cs" />
     <Compile Include="FolderEncryptor.cs" />
