--- a/SharpEncrypt/SharpEncrypt.csproj
+++ b/SharpEncrypt/SharpEncrypt.csproj
@@ -75,6 +75,7 @@
     <Compile Include="ScalableListBox.xaml.cs">
       <DependentUpon>ScalableListBox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Settings.cs" />
     <Compile Include="SharpEncryptException.cs" />
     <Compile Include="SharpEncryptModel.cs" />
     <Compile Include="TextBlockBufferable.cs" />
