--- a/.gitignore
+++ b/.gitignore
@@ -338,10 +338,4 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
-/icon.psd
-/icon.png
-/icon48.png
-/icon32.png
-/icon256.png
-/icon16.png
-/icon128.png
+/Icon
